fix overflow going offscreen

--- a/terminal.css
+++ b/terminal.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
-* {
+*, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -39,10 +39,11 @@ body {
   display: flex;
   flex-direction: column;
   padding-left: 1vw;
+  padding-bottom: 1vw;
 
   background-color: var(--terminal-background);
   position: relative;
-  height: 100%;
+  height: 100vh;
   color: var(--terminal-color);
 }
 
@@ -53,7 +54,7 @@ body {
   flex-wrap: wrap;
 }
 
-#terminal__input {
+#terminal__input, #terminal__input::before {
   height: 100%;
   width: fit-content;
   text-align: center;
@@ -62,6 +63,7 @@ body {
 
 #terminal__input::before {
   content: "> ";
+  display: inline-block;
 }
 
 .terminal__cursor {
@@ -72,6 +74,10 @@ body {
   animation-name: cursor;
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
+}
+
+#terminal__screen {
+  overflow: auto;
 }
 
 @keyframes cursor {
